--- a/chartjs/radar-chart/index.html
+++ b/chartjs/radar-chart/index.html
@@ -21,7 +21,8 @@
     </li></ul>
   </p>
   <canvas id="radar-chart-canvas" width="200" height="200" style="border:1px solid #000000;">
-    Your browser does not support the HTML5 canvas tag.
+    This radar chart comparing two neighborhoods uses an HTML5 canvas element,
+    which is not supported by your browser.
   </canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.1/Chart.bundle.min.js"></script>
   <script src="census-radar-chart.js"></script>
